4주차 강의 과제

--- a/src/main/resources/templates/info/list.html
+++ b/src/main/resources/templates/info/list.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>메인 화면</title>
 </head>
 <body>
+    <a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+    <a sec:authorize="hasRole('ADMIN')" th:href="@{/admin}">관리자 페이지</a>
+    <a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+    <a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
     <a th:href="@{/info}">글쓰기</a>
 
     <form action="/search" method="get">
